# NexusRAG

./: Cargo.toml  README.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: main.js
src/: api.rs  app_state.rs  config.rs  ingest.rs  llm.rs  main.rs  models.rs  neo4j_client.rs  rag.rs  vector_store.rs
