[package]
name = "neo4j_rag_rig_webapp"
version = "0.1.0"
edition = "2021"
authors = ["Angel A. Urbina Sánchez"]
description = "Sistema RAG en Rust con Neo4j y un frontend web moderno"
license = "MIT"

[dependencies]
# --- Core / Utilitarios Base ---
anyhow = "1.0"
dotenvy = "0.15"
url = "2.5"
webbrowser = "0.8"
dirs = "5.0" # <-- AÑADIR ESTA LÍNEA

# --- Serialización y Tipos de Datos ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# --- Asincronía, Runtime y Servidor Web ---
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
# FIX: Se añade la feature "macros" para poder usar #[axum::debug_handler]
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# --- IA y Base de Datos ---
rig = { package = "rig-core", version = "0.23.1" }
neo4rs = "0.6.2"

# --- Logging y Tracing ---
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- Archivos y Procesamiento ---
walkdir = "2.5"
mime_guess = "2.0"
pdf-extract = "0.10.0"

[dev-dependencies]
tokio-test = "0.4"

# --- Optimizaciones de Compilación ---
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true
incremental = true